# easy_ware

./: .gitignore  README.md
clustering_src/euclidean_cluster/: CMakeLists.txt
clustering_src/euclidean_cluster/launch/: fixed_angle_lidar.launch
clustering_src/euclidean_cluster/src/: euclidean_cluster.cpp  fixed_angle_lidar.cpp
src/FAST_LIO/Log/: mat_pre.txt
src/FAST_LIO/config/: mid360.yaml  velodyne.yaml
src/easy_ware/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/easy_ware/launch/: easy_rviz.launch  hdl_localization.rviz  hdl_rviz.launch  localizer.rviz  map_loader.launch  map_loader.launch~  map_modify_loader.launch  map_modify_loader.launch~  osm.launch  points_downsample.launch  points_downsample.launch~  static_tf.launch  static_tf.launch~
src/easy_ware/map/: first_map.osm  second_map.osm
src/easy_ware/mother/: mother_test.py
src/easy_ware/scripts/: base_link_position.py  can_control.py  can_start.h  can_start.py  command_program.py  config.yaml  create_point_obstacle.py  easy_manager.py  easy_manager.py~  easy_simulation.py  easy_simulation.py~  goal_place_select.py  gps_position.py  gps_tf.py  gps_tf_control.py  gps_velocity.py  initial_local_find.py  livox_base_connect.py  map_editor_program_modify.py  node_pump.py  node_pump0.py  odom_chase.py  planning_pyroutelib3.ipynb  planning_pyroutelib34.ipynb  purepursuit.py  start_autonomous_wheelchair.py  target_selector.py  teleop.py  world_livox.py
src/euclidean_cluster/: package.xml
src/euclidean_cluster/src/: euclidean_cluster_box.cpp  lidar_angle_robust.cpp  obstacle_detection.cpp
src/gps_common/src/: utm_odometry_node.cpp  utm_odometry_node.cpp~
src/hdl_localization/launch/: hdl_localization.launch
src/livox_ros_driver2/config/: MID360_config.json
src/ndt_localizer/: CMakeLists.txt
src/ndt_localizer/launch/: localizer.rviz  map_loader.launch  ndt_localizer.launch  static_tf.launch
src/ndt_localizer/nodes/: map_modify_loader.cpp  points_downsampler.cpp
src/open_street_map/osm_cartography/scripts/: osm_server  viz_osm
src/pointcloud_concatenate/launch/: concat.launch
src/ublox_utils/launch/: ublox.launch
src/voxel_filter/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/voxel_filter/src/: #pcl_voxel.cpp#  #voxel.cpp#  pcl_voxel.cpp
